--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,12 +1,12 @@
 [unix_http_server]
-file=/tmp/supervisor.sock   ; (the path to the socket file)
+file=/next/supervisor.sock   ; (the path to the socket file)
 
 [supervisord]
-logfile=/tmp/supervisord.log ; (main log file;default $CWD/supervisord.log)
+logfile=/next/supervisord.log ; (main log file;default $CWD/supervisord.log)
 logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
 logfile_backups=10           ; (num of main logfile rotation backups;default 10)
 loglevel=info                ; (log level;default info; others: debug,warn,trace)
-pidfile=/tmp/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
+pidfile=/next/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 nodaemon=false               ; (start in foreground if true;default false)
 minfds=1024                  ; (min. avail startup file descriptors;default 1024)
 minprocs=200                 ; (min. avail process descriptors;default 200)
@@ -18,16 +18,16 @@ minprocs=200                 ; (min. avail process descriptors;default 200)
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
+serverurl=unix:///next/supervisor.sock ; use a unix:// URL  for a unix socket
 
 [program:redis]
-command=/usr/local/bin/redis-server /etc/redis/redis.conf
+command=/usr/local/bin/redis-server /next/redis/redis.conf
 
 [program:mysqld]
-command=/usr/bin/mysqld_safe
+command=/usr/bin/mysqld_safe --defaults-file=/next/mysql/my.cnf
 
 [program:tomcat]
-command=/usr/local/tomcat/bin/catalina.sh run
+command=/next/tomcat/bin/catalina.sh run
 
 [program:nginx]
 command=/usr/sbin/nginx
