--- a/supervisord.conf
+++ b/supervisord.conf
@@ -21,13 +21,13 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///next/supervisor.sock ; use a unix:// URL  for a unix socket
 
 [program:redis]
-command=/usr/local/bin/redis-server /next/redis/redis.conf
+command=/usr/local/bin/redis-server /etc/redis/redis.conf
 
 [program:mysqld]
-command=/usr/bin/mysqld_safe --defaults-file=/next/mysql/my.cnf
+command=/usr/bin/mysqld_safe --defaults-file=/etc/mysql/my.cnf
 
 [program:tomcat]
-command=/next/tomcat/bin/catalina.sh run
+command=/usr/local/apache-tomcat-8.0.12/bin/catalina.sh run
 
 [program:nginx]
 command=/usr/sbin/nginx
