--- a/supervisord.conf
+++ b/supervisord.conf
@@ -20,6 +20,9 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 [supervisorctl]
 serverurl=unix:///next/supervisor.sock ; use a unix:// URL  for a unix socket
 
+[program:ssh]
+command=/usr/sbin/sshd -D
+
 [program:redis]
 command=/usr/local/bin/redis-server /etc/redis/redis.conf
 
