--- a/nexus/Dockerfile
+++ b/nexus/Dockerfile
@@ -5,13 +5,13 @@ FROM dockerfile/java:oracle-java8
 MAINTAINER lzy7750015@gmail.com
 
 ENV NEXUS_HOME /usr/local/nexus
+ENV NEXUS_WEB_CONTEXT /nexus
 
 RUN \
   wget -O /tmp/nexus-latest-bundle.tar.gz http://www.sonatype.org/downloads/nexus-2.10.0-02-bundle.tar.gz && \
   tar xzvf /tmp/nexus-latest-bundle.tar.gz -C /usr/local && \
-  useradd --user-group --system nexus && \
-  chown -R nexus:nexus /usr/local/nexus-* /usr/local/sonatype-work && \
   ln -s /usr/local/nexus-* /usr/local/nexus
+  sed -i 's/^\(nexus-webapp-context-path\)=\(\\nexus\S*\)/\1=${env:NEXUS_WEB_CONTEXT}/' /usr/local/nexus/conf/nexus.properties
 
 VOLUME ["/usr/local/nexus", "/usr/local/sonatype-work"]
 
