fixed nexus bug

--- a/nexus/Dockerfile
+++ b/nexus/Dockerfile
@@ -10,10 +10,14 @@ ENV NEXUS_WEB_CONTEXT /nexus
 RUN \
   wget -O /tmp/nexus-latest-bundle.tar.gz http://www.sonatype.org/downloads/nexus-2.10.0-02-bundle.tar.gz && \
   tar xzvf /tmp/nexus-latest-bundle.tar.gz -C /usr/local && \
-  ln -s /usr/local/nexus-* /usr/local/nexus
+  useradd --user-group --system nexus && \
+  chown -R nexus:nexus /usr/local/nexus-* /usr/local/sonatype-work && \
+  ln -s /usr/local/nexus-* /usr/local/nexus && \
   sed -i 's/^\(nexus-webapp-context-path\)=\(\\nexus\S*\)/\1=${env:NEXUS_WEB_CONTEXT}/' /usr/local/nexus/conf/nexus.properties
 
 VOLUME ["/usr/local/nexus", "/usr/local/sonatype-work"]
+
+USER nexus
 
 WORKDIR /usr/local/nexus
 
